[gd_scene load_steps=10 format=3 uid="uid://d146f4nvtxkbc"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_cppsc"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="2_mvfe1"]
[ext_resource type="PackedScene" uid="uid://drioxemoktbtr" path="res://scenes/player/player.tscn" id="2_vmoa8"]
[ext_resource type="Texture2D" uid="uid://s20dp4av2sc7" path="res://assets/sprites/chaticons2.png" id="4_kqxca"]
[ext_resource type="Texture2D" uid="uid://bqsu8enivi4b1" path="res://assets/sprites/chaticons3.png" id="5_pkppa"]
[ext_resource type="Texture2D" uid="uid://cqjpw44ltvbww" path="res://assets/sprites/chaticons4.png" id="6_3knuy"]
[ext_resource type="PackedScene" uid="uid://bl2s5ktdlsqvu" path="res://scenes/chat_window.tscn" id="7_umeys"]
[ext_resource type="AudioStream" uid="uid://damvexp438gwf" path="res://assets/sounds/select1.ogg" id="8_lo2ue"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_4gotb"]
properties/0/path = NodePath(".:num_bots")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="game" type="Node2D"]
script = ExtResource("1_cppsc")

[node name="map" type="Node2D" parent="."]

[node name="players" type="Node2D" parent="."]

[node name="hud" type="CanvasLayer" parent="."]
layer = 0

[node name="lobby_ui" type="Control" parent="hud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BottomInfo" type="Label" parent="hud/lobby_ui"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="hud/lobby_ui"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.5
offset_top = -81.0
offset_right = 182.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="Virtual Joystick" parent="hud" instance=ExtResource("2_mvfe1")]
offset_left = 12.0
offset_top = -334.0
offset_right = 312.0
offset_bottom = -34.0
mouse_filter = 1
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="role_reveal" type="Control" parent="hud"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="hud/role_reveal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="role_player" parent="hud/role_reveal" instance=ExtResource("2_vmoa8")]
position = Vector2(572, 381)
collision_layer = 0
collision_mask = 0
is_local_player = false
player_name = ""
can_animate = false
can_have_authority = false

[node name="role_text" type="Label" parent="hud/role_reveal"]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 143.0
theme_override_font_sizes/font_size = 50
text = "Impostor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hide_timer" type="Timer" parent="hud/role_reveal"]
wait_time = 2.0
one_shot = true

[node name="FailDialog" type="AcceptDialog" parent="hud"]
title = "Warning"
initial_position = 2
dialog_text = "Failed to start game"

[node name="vc_enable" type="TextureButton" parent="hud"]
modulate = Color(1, 1, 1, 0.501961)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -32.0
offset_right = -30.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("4_kqxca")

[node name="chat" type="TextureButton" parent="hud"]
modulate = Color(1, 1, 1, 0.501961)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -197.0
offset_top = 33.0
offset_right = -133.0
offset_bottom = 97.0
grow_horizontal = 0
texture_normal = ExtResource("5_pkppa")

[node name="menu" type="TextureButton" parent="hud"]
modulate = Color(1, 1, 1, 0.501961)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.0
offset_top = 33.0
offset_right = -52.0
offset_bottom = 97.0
grow_horizontal = 0
texture_normal = ExtResource("6_3knuy")

[node name="ChatWindow" parent="hud" instance=ExtResource("7_umeys")]
visible = false
custom_minimum_size = Vector2(600, 400)
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -732.0
offset_top = 96.0
offset_right = -132.0
offset_bottom = 496.0
grow_horizontal = 0
grow_vertical = 1

[node name="PauseWindow" type="PanelContainer" parent="hud"]
visible = false
custom_minimum_size = Vector2(400, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -269.0
offset_right = 200.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2

[node name="btns" type="VBoxContainer" parent="hud/PauseWindow"]
layout_mode = 2

[node name="bot_spawn_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="bg" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="bg"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../players")

[node name="BotSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../players")

[node name="chat_new" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lo2ue")
pitch_scale = 2.0

[node name="announce_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="GameState" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_4gotb")

[node name="dediserver_timer" type="Timer" parent="."]
wait_time = 20.0
